Remove sample blog posts
Signed-off-by: Luc Perkins <lucperkins@gmail.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>{{ block "title" . }}{{ .Site.Title }} | {{ .Site.Params.subtitle }} {{ end }}</title>
     {{ partial "css.html" . }}
   </head>
   <body class="page has-navbar-fixed-top">
