--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,3 +1,7 @@
+{{ define "title" }}
+Vitess | {{ .Title }}
+{{ end }}
+
 {{ define "main" }}
 {{ partial "docs/hero.html" . }}
 {{ partial "docs/tabs-list.html" . }}
