--- a/layouts/partials/blog/hero.html
+++ b/layouts/partials/blog/hero.html
@@ -1,11 +1,15 @@
 <section class="hero is-black">
   <div class="container">
     <div class="hero-body">
-
-      <p class="title is-size-2 has-text-grey-light">
+      <p class="title is-size-1 has-text-grey-light is-spaced">
         {{ .Title }}
       </p>
-      
+
+      {{- with .Params.subtitle }}
+      <p class="subtitle is-size-4 has-text-white-bis">
+        {{ . | markdownify }}
+      </p>
+      {{- end }}
     </div>
   </div>
 </section>
